--- a/figuras.css
+++ b/figuras.css
@@ -1,5 +1,15 @@
 * {
     box-sizing: border-box;   
+    font-size: 100%;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    @media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    body { line-height: 1.4 }
+}
+    padding: 0;
+    margin: 0;
 }
 h1 {
     justify-content: center;
