--- a/figuras.css
+++ b/figuras.css
@@ -2,12 +2,6 @@
     box-sizing: border-box;   
     font-size: 100%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    @media only screen
-  and (min-device-width: 320px)
-  and (max-device-width: 480px)
-  and (-webkit-min-device-pixel-ratio: 2) {
-    body { line-height: 1.4 }
-}
     padding: 0;
     margin: 0;
 }
@@ -17,7 +11,5 @@ h1 {
     color: blue;
 }
 p {
-    justify-content: center;
-    display: flex;
-    color: brown;
+    font-size: 20px;
 }
