--- a/APIs/css/style.css
+++ b/APIs/css/style.css
@@ -2,9 +2,12 @@
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
 }
-.title1 {
-    background-color: aqua;
-    color: red;
+.box {
+    width: 150px;
+    height: 150px;
+    margin: 1px;
+    border: 1px;
+    border-color: blue;
 }
 h2 {
     color: blueviolet;
